[package]
authors = ["Evervault Engineering engineering@evervault.com"]
edition = "2021"
name = "wasm-attestation-bindings"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
attestation-doc-validation = { path = "../attestation-doc-validation" }
rsa = "0.9.7"
pkcs1 = "0.7.5"
hex = "0.4.3"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
anyhow = "1.0"
ed25519-dalek = "2.1.1"
rand = "0.8.4"